feat: création de herosection et modification du navbar

--- a/index.html
+++ b/index.html
@@ -9,23 +9,48 @@
   <body>
     <nav>
       <div class="title row">
-        <img src="icon/boussole (1).png" alt="logo" />
+        <img src="icon/bea2d1de24c45bc7b606fbed40536bf3.jpg" alt="logo" />
         <h2>
-          <b><i>Travel</i></b>
+          <b><i>Travel </i></b>
         </h2>
       </div>
       <div class="search row">
-        <input type="search" name="search" id="search" />
-        <img src="icon/🦆 icon _Search_.png" alt="search" />
+        <img src="icon/loupe.png" alt="search row" />
+        <input
+          type="search"
+          placeholder="search for destination"
+          name="search"
+        />
       </div>
       <div class="navbar row">
         <ul>
-          <li><a href="#partie"></a>Home</li>
-          <li>About</li>
-          <li>Destination</li>
-          <li>Contact</li>
+          <li><a href="#herosection">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="journal">Destination</a></li>
+          <li><a href="footer">Contact</a></li>
         </ul>
       </div>
     </nav>
+    <section id="heroSection">
+      <div class="text">
+        <button id="littleH1">
+          Explore the world
+          <img src="icon/globe-terrestre.png" alt="glob pic" />
+        </button>
+        <h1>
+          <span style="color: brown">Find</span> your <br />
+          dream <img src="icon/icons8-appareil-photo-100.png" alt="" />
+          <br />
+          destination
+        </h1>
+        <p>
+          Learn about tourism, and you will <br />
+          amazed by all of experiences you <br />
+          can find.
+        </p>
+        <button class="planning">
+          Plan a trip<img src="icon/icons8-chevron-right-32.png" alt="" />
+        </button>
+      </div>
   </body>
 </html>
