feat : ajout de la deuxiéme partie de heroSction

--- a/index.html
+++ b/index.html
@@ -52,5 +52,23 @@
           Plan a trip<img src="icon/icons8-chevron-right-32.png" alt="" />
         </button>
       </div>
+      <main class="text2">
+        <h3>Why are you most your excited ?</h3>
+        <div class="service row">
+          <img src="icon/Hiking2.png" alt="" />
+          <p>Hiking</p>
+        </div>
+        <div class="service row">
+          <img src="icon/parachit.png" alt="" />
+          <p>Parachiting</p>
+        </div>
+        <div class="service row">
+          <img src="icon/tourism.png" alt="" />
+          <p>Tourism</p>
+        </div>
+        <div class="service row">
+          <img src="icon/surf.png" alt="" />
+          <p>Serfing</p>
+        </div>
   </body>
 </html>
