fix: modification du heroSection

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="icon/loupe.png" alt="search row" />
         <input
           type="search"
-          placeholder="search for destination"
+          placeholder="search for destination...."
           name="search"
         />
       </div>
@@ -70,5 +70,15 @@
           <img src="icon/surf.png" alt="" />
           <p>Serfing</p>
         </div>
+        <div class="client row">
+          <img src="icon/user.jpg" alt="" />
+          <div class="commentaire">
+            <p>Very good service</p>
+            <img src="icon/Star 2.png" alt="" />
+            <img src="icon/Star 2.png" alt="" />
+            <img src="icon/Star 2.png" alt="" />
+            <img src="icon/Star 2.png" alt="" />
+            <img src="icon/Star 2.png" alt="" />
+          </div>
   </body>
 </html>
