feat: ajout de la 2ème section(about)

--- a/index.html
+++ b/index.html
@@ -80,5 +80,47 @@
             <img src="icon/Star 2.png" alt="" />
             <img src="icon/Star 2.png" alt="" />
           </div>
+    </section>
+    <section id="about">
+      <img src="icon/avion.png" alt="" class="plane" />
+          <div class="aboutUs colum">
+            <h3>Get exclusive travel guids</h3>
+            <div class="guids">
+              <img src="icon/chatlist5.jpg" alt="" />
+              <img src="icon/chatlist6.jpg" alt="" />
+              <img src="icon/topchanel3.jpg" alt="" />
+              <p>& more...</p>
+            </div>
+            <p class="citation">Until you step into the unknown, you
+                  don’t know what you’re made of.</p>
+          </div>
+          <div class="featurePlace colum">
+            <h1>
+              Featured Places...
+              <img src="icon/love.png" alt="heart icon" class="heart" />
+            </h1>
+            <div class="container row">
+              <div class="place1">
+                <button class="place">
+                  <img src="icon/espace-reserve.png" alt="" /> lieu
+                </button>
+              </div>
+              <div class="place2">
+                <button class="place">
+                  <img src="icon/espace-reserve.png" alt="" /> lieu
+                </button>
+              </div>
+              <div class="place3">
+                <button class="place">
+                  <img src="icon/espace-reserve.png" alt="" /> lieu
+                </button>
+              </div>
+            </div>
+            <divw class=" option row">
+              <p>SEE MORE</p>
+              <img src="icon/chevron-droit.png" alt="" class="chevron" />
+            </div>
+          </div>
+    </section>
   </body>
 </html>
