--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
       <div class="navbar row">
         <ul>
-          <li><a href="#herosection">Home</a></li>
+          <li><a href="#heroSection">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="journal">Destination</a></li>
+          <li><a href="journal">Jornal</a></li>
           <li><a href="footer">Contact</a></li>
         </ul>
       </div>
@@ -122,5 +122,32 @@
             </div>
           </div>
     </section>
+          <section id="journal">
+        <div class="message">
+          <h1>Journal</h1>
+          <p>Our favorite stories about public lands and opportinities for you to get <br>
+          <span> involved in protecting your outdoor experiences</span></p>
+        </div>
+        <div class="containts row">
+        <div class="yosemite colum">
+          <img src="" alt="">
+          <p>22 April 2023</p>
+          <h1>An Unforgettable</h1>
+          <p>If you only have one day to visit Yosemite National Parck <br> 
+          <span>and you want to make the most out of it.</span></p>
+        </div>
+        <div class="francisco colum">
+          <img src="" alt="">
+          <p>20 April 2023</p>
+          <h1>Symphonies in Stell</h1>
+          <p>Crossing the Golden Gate Bridge from San Francisco, you arrive <br>
+          <span> in Marin even before landing on solid ground.</span></p>
+        </div>
+        </div>
+        <div class="post row">
+          <p>ALL POSTS</p>
+          <img src="icon/chevron-droit.png" alt="">
+        </div>
+      </section>
   </body>
 </html>
