Fix: modification de la section about et journal

--- a/index.html
+++ b/index.html
@@ -101,19 +101,22 @@
             </h1>
             <div class="container row">
               <div class="place1">
-                <button class="place">
-                  <img src="icon/espace-reserve.png" alt="" /> lieu
-                </button>
+                <img src="Landscape/mexique.jfif" alt="">
+                <!-- <button class="place">
+                  <img src="icon/espace-reserve.png" alt="" /> Mexica
+                </button> -->
               </div>
               <div class="place2">
-                <button class="place">
+                <img src="Landscape/ecdcaa26-ebb7-4710-a18b-9d46b0e2caa3.jfif" alt="">
+                <!-- <button class="place">
                   <img src="icon/espace-reserve.png" alt="" /> lieu
-                </button>
+                </button> -->
               </div>
               <div class="place3">
-                <button class="place">
+                <img src="Landscape/Uummannaq - Greenland.jfif" alt="">
+                <!-- <button class="place">
                   <img src="icon/espace-reserve.png" alt="" /> lieu
-                </button>
+                </button> -->
               </div>
             </div>
             <divw class=" option row">
@@ -130,14 +133,14 @@
         </div>
         <div class="containts row">
         <div class="yosemite colum">
-          <img src="" alt="">
+          <img src="Landscape/d41e9e2b-0c8c-4fc5-a452-79c2b55016d5.jfif" alt="">
           <p>22 April 2023</p>
           <h1>An Unforgettable</h1>
           <p>If you only have one day to visit Yosemite National Parck <br> 
           <span>and you want to make the most out of it.</span></p>
         </div>
         <div class="francisco colum">
-          <img src="" alt="">
+          <img src="Landscape/San fran.jfif" alt="">
           <p>20 April 2023</p>
           <h1>Symphonies in Stell</h1>
           <p>Crossing the Golden Gate Bridge from San Francisco, you arrive <br>
