feat: responsive(partie1)

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
           name="search"
         />
       </div>
+      <img src="icon/barre-de-menu (1).png" class="menu" alt="">
       <div class="navbar row">
         <ul>
           <li><a href="#heroSection">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="journal">Jornal</a></li>
+          <li><a href="#journal">Jornal</a></li>
           <li><a href="footer">Contact</a></li>
         </ul>
       </div>
@@ -100,8 +101,10 @@
               <img src="icon/love.png" alt="heart icon" class="heart" />
             </h1>
             <div class="container row">
-              <div class="place1">
-                <img src="Landscape/mexique.jfif" alt="">
+              <div class="place1 row">
+                <img src="Landscape/mexique.jfif" alt="" class="img1">
+                <img src="Landscape/Mexique3.jfif" alt="" class="img2">
+                <img src="Landscape/Mexique4.jfif" alt="" class="img3">
                 <!-- <button class="place">
                   <img src="icon/espace-reserve.png" alt="" /> Mexica
                 </button> -->
