fix: keyframes et amélioration de code(#about)

--- a/index.html
+++ b/index.html
@@ -95,31 +95,32 @@
             <p class="citation">Until you step into the unknown, you
                   don’t know what you’re made of.</p>
           </div>
-          <div class="featurePlace colum">
+          <div class="featuredPlace colum">
             <h1>
               Featured Places...
               <img src="icon/love.png" alt="heart icon" class="heart" />
             </h1>
-            <div class="container row">
-              <div class="place1 row">
-                <img src="Landscape/mexique.jfif" alt="" class="img1">
-                <img src="Landscape/Mexique3.jfif" alt="" class="img2">
-                <img src="Landscape/Mexique4.jfif" alt="" class="img3">
-                <!-- <button class="place">
-                  <img src="icon/espace-reserve.png" alt="" /> Mexica
-                </button> -->
+            <div class="imageContainer row">
+              <div class="place">
+                <div class="containerSlide">
+                  <img src="Landscape/mexique.jfif" alt="">
+                  <img src="Landscape/Mexique3.jfif" alt="">
+                  <img src="Landscape/Mexique4.jfif" alt="">
+                </div>
               </div>
-              <div class="place2">
+              <div class="place top">
+                <div class="containerSlide">
                 <img src="Landscape/ecdcaa26-ebb7-4710-a18b-9d46b0e2caa3.jfif" alt="">
-                <!-- <button class="place">
-                  <img src="icon/espace-reserve.png" alt="" /> lieu
-                </button> -->
+                <img src="Landscape/Blue beach night sky.jfif" alt="">
+                <img src="Landscape/PeqCi.jfif" alt="">
               </div>
-              <div class="place3">
+              </div>
+              <div class="place">
+                <div class="containerSlide">
                 <img src="Landscape/Uummannaq - Greenland.jfif" alt="">
-                <!-- <button class="place">
-                  <img src="icon/espace-reserve.png" alt="" /> lieu
-                </button> -->
+                <img src="Landscape/e6b965bd-e8be-4852-883a-1aa50d7d1985.jfif" alt="">
+                <img src="Landscape/Top 10 Things to do in Greenland (1).jfif" alt="">
+              </div>
               </div>
             </div>
             <divw class=" option row">
