feat: ajout d'un footer et fix: keyframes to :hover

--- a/index.html
+++ b/index.html
@@ -53,23 +53,26 @@
           Plan a trip<img src="icon/icons8-chevron-right-32.png" alt="" />
         </button>
       </div>
+      <div class="milieu">
+        <img src="Landscape/Milieu.png" alt="">
+      </div>
       <main class="text2">
-        <h3>Why are you most your excited ?</h3>
+        <h3><b>Why you are most excited?</b></h3>
         <div class="service row">
           <img src="icon/Hiking2.png" alt="" />
-          <p>Hiking</p>
+          <h5>Hiking</h5>
         </div>
         <div class="service row">
           <img src="icon/parachit.png" alt="" />
-          <p>Parachiting</p>
+          <h5>Parachiting</h5>
         </div>
         <div class="service row">
           <img src="icon/tourism.png" alt="" />
-          <p>Tourism</p>
+          <h5>Tourism</h5>
         </div>
         <div class="service row">
           <img src="icon/surf.png" alt="" />
-          <p>Serfing</p>
+          <h5>Surfing</h5>
         </div>
         <div class="client row">
           <img src="icon/user.jpg" alt="" />
@@ -101,33 +104,76 @@
               <img src="icon/love.png" alt="heart icon" class="heart" />
             </h1>
             <div class="imageContainer row">
-              <div class="place">
-                <div class="containerSlide">
-                  <img src="Landscape/mexique.jfif" alt="">
-                  <img src="Landscape/Mexique3.jfif" alt="">
-                  <img src="Landscape/Mexique4.jfif" alt="">
+              <div class="container">
+                <div class="place">
+                  <div class="front"><img src="Landscape/Plan Now_ Maldives Travel Guide.jfif" alt="" /> </div> 
+                  <div class="back">
+                    <div class="lieu">
+                       <img src="icon/lieu.png" alt="" /> 
+                      <h1>Maldrives</h1>
+                    </div>
+                       <p> 
+                        With its magnificent islands, mesmerizing beaches and turquoise waters,
+                         the Maldives is famous for its exciting water activities. If you are an
+                          adventure lover, the variety of water sports will make you want to stay there forever. <br>
+                          And they is world-famous for its wide spectrum of marine life
+                      </p> 
+                      <p class="price row"><b>From US$285.00</b></p>
+                      <button class="booking">Booking now</button>
+                  </div>
+                </div> 
+              </div> 
+
+              <div class="container">
+                <div class="place">
+                  <div class="front top"><img src="Landscape/mexique.jfif" alt="" /> </div> 
+                  <div class="back">
+                    <div class="lieu">
+                       <img src="icon/lieu.png" alt="" /> 
+                      <h1>Mexico</h1>
+                    </div>
+                       <p>
+                        Mexico is a huge country, with a rich history and culture. 
+                        There are different natural environments to explore. 
+                        The country has the 7th largest amount of UNESCO sites,
+                        with 35 sites, so you can be sure there’s plenty to see! <br>
+                        It’s such a varied country and there’s something for everyone. 
+                        From ancient history to unique swimming spots.
+                      </p>  
+                      <p class="price"><b>From US$297.00</b></p>
+                      <button class="booking">Booking now</button>
+                  </div>                 
+                </div> 
+              </div>
+
+              <div class="container">
+                <div class="place">
+                  <div class="front"><img src="Landscape/Uummannaq - Greenland.jfif" alt="" /> </div> 
+                  <div class="back">
+                    <div class="lieu">
+                       <img src="icon/lieu.png" alt="" /> 
+                      <h1>Greenland</h1>
+                    </div>
+                       <p>
+                        Remarkable landscapes, exceptional wildlife, iceberg-choked fjords and colorful
+                        tundra are among the unique traits that make Greenland a destination unlike any other.
+                        It's one of the best places to see the northern lights.
+                        His economy depends on exports of shrimp and fish, and on a
+                        substantial subsidy from the Danish Government. 
+                      </p> 
+                          <p class="price"><b>From US$1000</b></p>
+                      <button class="booking">Booking now</button>
+                  </div>
                 </div>
               </div>
-              <div class="place top">
-                <div class="containerSlide">
-                <img src="Landscape/ecdcaa26-ebb7-4710-a18b-9d46b0e2caa3.jfif" alt="">
-                <img src="Landscape/Blue beach night sky.jfif" alt="">
-                <img src="Landscape/PeqCi.jfif" alt="">
-              </div>
-              </div>
-              <div class="place">
-                <div class="containerSlide">
-                <img src="Landscape/Uummannaq - Greenland.jfif" alt="">
-                <img src="Landscape/e6b965bd-e8be-4852-883a-1aa50d7d1985.jfif" alt="">
-                <img src="Landscape/Top 10 Things to do in Greenland (1).jfif" alt="">
-              </div>
-              </div>
-            </div>
-            <divw class=" option row">
-              <p>SEE MORE</p>
-              <img src="icon/chevron-droit.png" alt="" class="chevron" />
-            </div>
+
+             
+                 
           </div>
+          <div class=" option row">
+            <p>SEE MORE</p>
+            <img src="icon/chevron-droit.png" alt="" class="chevron" />
+          </div> 
     </section>
           <section id="journal">
         <div class="message">
@@ -155,6 +201,48 @@
           <p>ALL POSTS</p>
           <img src="icon/chevron-droit.png" alt="">
         </div>
+      </section>
+      <section id="footer">
+        <div class="all">
+          <div>
+          <h1><i>Traveller</i></h1>
+          <div class="navigation">
+            <ul>
+              <li><a href="#heroSection">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#journal">Journal</a></li>
+              <li><a href="#footer">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+          <div class="partner">
+            <h1>Our partner</h1>
+            <ul>
+              <li><a href="https://www.nationalgeographic.com/">National Geographic</a></li>
+              <li><a href="https://www.axa.fr/">GetYourGuide</a></li>
+              <li><a href="">Booking.com</a></li>
+              <li><a href="">Air France </a></li>
+              <li><a href="">Google</a></li>
+              <li><a href="">AXA</a></li>
+            </ul>
+          </div>
+          <div class="contact"><h1>Contact</h1>
+            <p>hei.ninah.2@gmail.com</p>
+            <p>+261 34 97 452 82</p>
+          </div>
+            <div class="reseau">
+              <h1>Follow us</h1>
+            <img src="icon/fb.png" alt="" />
+            <img src="icon/twiter.png" alt="" />
+            <img src="icon/instagram.png" alt="" />
+            <img src="icon/linkedin.png" alt="">
+          </div>
+        </div>
+      <footer>
+        <hr>
+        <p class="droit">© 2024 Ninah HEI. All rights reserved.</p>
+
+      </footer>
       </section>
   </body>
 </html>
