fix: dernière modification

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="title row">
         <img src="icon/bea2d1de24c45bc7b606fbed40536bf3.jpg" alt="logo" />
         <h2>
-          <b><i>Travel </i></b>
+          <b><i>Traveller </i></b>
         </h2>
       </div>
       <div class="search row">
@@ -22,13 +22,12 @@
           name="search"
         />
       </div>
-      <img src="icon/barre-de-menu (1).png" class="menu" alt="">
       <div class="navbar row">
         <ul>
           <li><a href="#heroSection">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#journal">Jornal</a></li>
-          <li><a href="footer">Contact</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -95,7 +94,7 @@
               <img src="icon/topchanel3.jpg" alt="" />
               <p>& more...</p>
             </div>
-            <p class="citation">Until you step into the unknown, you
+            <p class="citation">Until you stay into the unknown, you
                   don’t know what you’re made of.</p>
           </div>
           <div class="featuredPlace colum">
@@ -220,7 +219,7 @@
             <ul>
               <li><a href="https://www.nationalgeographic.com/">National Geographic</a></li>
               <li><a href="https://www.axa.fr/">GetYourGuide</a></li>
-              <li><a href="">Booking.com</a></li>
+              <li><a href="https://www.Booking.com">Booking.com</a></li>
               <li><a href="">Air France </a></li>
               <li><a href="">Google</a></li>
               <li><a href="">AXA</a></li>
